Rewrite all from pure React to Redux. Change react-scripts to react-app-rewired for use es7 feature - decorators.

--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "dependencies": {
     "gh-pages": "^2.0.0",
     "react": "^16.5.2",
+    "react-app-rewire-decorators-legacy": "^0.1.0",
+    "react-app-rewired": "^1.6.2",
     "react-dom": "^16.5.2",
-    "react-scripts": "1.1.5"
+    "react-redux": "^5.0.7",
+    "react-scripts": "1.1.5",
+    "redux": "^4.0.0",
+    "redux-form": "^7.4.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
+    "eject": "react-app-rewired eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   }
