--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://verbart.github.io/todo-react",
   "dependencies": {
+    "@material-ui/core": "^3.1.2",
+    "@material-ui/icons": "^3.0.1",
     "gh-pages": "^2.0.0",
     "react": "^16.5.2",
     "react-app-rewire-decorators-legacy": "^0.1.0",
@@ -12,7 +14,8 @@
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
-    "redux-form": "^7.4.2"
+    "redux-form": "^7.4.2",
+    "redux-form-material-ui": "^5.0.0-beta.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
