--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "gh-pages": "^2.0.0",
     "react": "^16.5.2",
     "react-app-rewire-decorators-legacy": "^0.1.0",
+    "react-app-rewire-scss": "^1.0.2",
     "react-app-rewired": "^1.6.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
