--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-scripts": "1.1.5",
+    "react-semantic-redux-form": "^1.2.6",
     "redux": "^4.0.0",
     "redux-form": "^7.4.2",
     "semantic-ui-css": "^2.4.1",
