--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^16.5.2",
     "react-jss": "^8.6.1",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-semantic-redux-form": "^1.2.6",
     "react-textarea-autosize": "^7.0.4",
