--- a/package.json
+++ b/package.json
@@ -1,35 +1,38 @@
 {
   "name": "todo-react",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "homepage": "https://verbart.github.io/todo-react",
   "dependencies": {
-    "formik": "^1.4.1",
-    "gh-pages": "^2.0.0",
-    "react": "^16.5.2",
-    "react-app-rewire-decorators-legacy": "^0.1.0",
-    "react-app-rewired": "^1.6.2",
-    "react-dom": "^16.5.2",
+    "formik": "^1.4.2",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-jss": "^8.6.1",
-    "react-redux": "^5.0.7",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
-    "react-semantic-redux-form": "^1.2.6",
     "react-textarea-autosize": "^7.0.4",
-    "redux": "^4.0.0",
+    "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.82.5",
+    "semantic-ui-react": "^0.84.0",
     "yup": "^0.26.6"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "gh-pages": "^2.0.1",
+    "react-scripts": "^2.1.3",
     "redux-devtools-extension": "^2.13.7"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
