--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "formik": "^1.4.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-jss": "^8.6.1",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-textarea-autosize": "^7.0.4",
@@ -26,6 +25,7 @@
   },
   "devDependencies": {
     "gh-pages": "^2.0.1",
+    "node-sass": "^4.11.0",
     "react-scripts": "^2.1.3",
     "redux-devtools-extension": "^2.13.7"
   },
